# multimodal-fid

./: .gitignore  .gitmodules  LICENSE  README.md  dist_vqgan.py  environment.yml  fucking_around.ipynb  prompts.txt  pyproject.toml  requirements.txt  run_job.sh  timm_environment.yaml  timm_tests.ipynb  timm_train.py  train_inceptionv3_birds.py  vqgan.py
configs/: birds.yaml  imagenet.yaml
tests/: test_calc_metrics.py  test_dataset.py  test_mfid.py  test_mmfid.py  test_model.py  test_sentence_transformer.py  test_vqgan_clip.py
ttig/: calc_metrics.py  dataset.py  distributed_generation.py  main.py  mfid.py  mmfid.py  model.py  sentence_transformer.py  utils.py
ttig/models/: model.py  vqgan_clip.py
