[tool.poetry]
name = "ttig"
version = "0.1.0"
description = ""
authors = ["Stella Bidderman", "Katherine Crowson", "Dashiell Stander <dash.stander@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
